crates/djls-semantic/tests/snapshots/corpus__repos__geonode__geonode__layers__templatetags__contact_roles.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "geonode.layers.templatetags.contact_roles::tag::getattribute":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: form
        required: true
        kind: Variable
        position: 0
      - name: contact
        required: true
        kind: Variable
        position: 1
    as_var: strip
filter_arities:
  "geonode.layers.templatetags.contact_roles::filter::get_contact_role_id":
    expects_arg: true
    arg_optional: false
  "geonode.layers.templatetags.contact_roles::filter::get_contact_role_label":
    expects_arg: true
    arg_optional: false
  "geonode.layers.templatetags.contact_roles::filter::get_contact_role_value":
    expects_arg: true
    arg_optional: false
block_specs: {}
